crates/compiler/codegen/tests/snapshots/mdtest_snapshots__mdtest_codegen_snapshots@01-basics__03-functions__functions_in_cairom__function_with_parameters.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Function with Parameters"
input_file: mdtest/01-basics/03-functions.md
---
Test: Functions in Cairo-M - Function with Parameters
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/01-basics/03-functions.md
============================================================
Source:
fn add(a: felt, b: felt) -> felt {
    return a + b;
}
============================================================
Generated CASM:
add:
   0: 0 -5 -4 -3           // [fp + -3] = [fp + -5] op [fp + -4]
   1: 11 _ _ _             // return
