crates/compiler/codegen/tests/snapshots/mdtest_snapshots__mdtest_codegen_snapshots@01-basics__03-functions__functions_in_cairom__simple_function.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Simple Function"
input_file: mdtest/01-basics/03-functions.md
---
Test: Functions in Cairo-M - Simple Function
File: /Users/msaug/kkrt-labs/cairo-m/mdtest/01-basics/03-functions.md
============================================================
Source:
fn simple() -> felt {
    return 42;
}
============================================================
Generated CASM:
simple:
   0: 9 42 -3 _            // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
